tests/pos/simple/ref-in-constructor.ts
class Foo {
    /*@ new (x: number, y: {number | v < x}) => void */
    constructor(x, y) { }
}
