tests/neg/simple/bad-spec-00.ts
class Blah {
  constructor() {}

  /*@ foo() : void */
  foo() {}

  /*@ foo() : void */
  bar() {}
}
